--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
     "username": "root",
-    "password": "toor",
-    "database": "pw_1",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "password": "fb1F32DcC3Cbdcf-gb62ge-GH1F1d3ed",
+    "database": "railway",
+    "host": "monorail.proxy.rlwy.net",
+    "dialect": "mysql",
+    "port" : 14222
   },
   "test": {
     "username": "root",
@@ -16,7 +17,7 @@
   "production": {
     "username": "root",
     "password": "toor",
-    "database": "database_production",
+    "database": "railway",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
